--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -36,7 +36,7 @@ qt_add_repc_merged(ui
 
 if(${USE_MANUAL_TYPE_REGISTRATION})
     target_sources(ui
-        PUBLIC
+        PRIVATE
             QMLTypeRegistration.h
     )
 
